# Trip

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  coverage.json  docker-compose.yaml  main.py  pyproject.toml
.github/workflows/: ci.yaml  coverage.yaml  fifth.yaml  forth.yaml  second.yaml  sixth.yaml  third.yaml
scripts/: cli.py  init_db.py  start-celery.sh
scripts/cli_tools/: prepopulate_db.py
src/: config.py  ioc_registry.py  main.py
src/apps/authentication/: config.py  ioc.py
src/apps/authentication/adapters/: adapter.py
src/apps/authentication/application/: exceptions.py
src/apps/authentication/application/interfaces/: gateway.py
src/apps/authentication/domain/: enums.py  results.py
src/apps/authentication/provider/adapters/: adapter.py
src/apps/authentication/provider/application/: ensure.py  service.py
src/apps/authentication/provider/domain/: commands.py  exceptions.py  fetches.py  models.py  results.py
src/apps/authentication/session/adapters/: adapter.py
src/apps/authentication/session/application/: ensure.py  exceptions.py  service.py
src/apps/authentication/session/domain/: commands.py  (+4 more)
src/apps/authentication/user/: ioc.py
src/apps/authorization/: ioc.py
src/apps/billing/domain/: models.py
src/apps/comment/: config.py  ioc.py
src/apps/comment/adapters/: adapter.py
src/apps/comment/application/: service.py
src/apps/comment/domain/: commands.py  excepitions.py  fetches.py  models.py  results.py
src/apps/hotel/: config.py  ioc.py
src/apps/hotel/file_object/: config.py
src/apps/notification/: enums.py  ioc.py
src/apps/security/adapters/: adapter.py
src/apps/security/application/: exception.py
src/apps/user/: ioc.py
src/apps/user/adapters/: adapter.py
src/apps/user/application/: ensure.py  enums.py  exception.py  exceptions.py  service.py
src/apps/user/domain/: commands.py  model.py  models.py
src/common/: interfaces.py
src/common/adapters/: adapter.py
src/common/application/: ensure.py  enums.py  exceptions.py  service.py
src/common/controllers/dto/: base.py
src/common/controllers/http/: api_v1.py
src/common/domain/: commands.py  enums.py  models.py
src/common/exceptions/: common.py  handlers.py
src/common/utils/: auth_scheme.py  dependency.py
src/infrastructure/: ioc.py
src/infrastructure/context/: __init__.py  ioc.py  request.py
src/infrastructure/database/: factory.py
src/infrastructure/database/memory/: config.py  database.py
src/infrastructure/database/postgres/: config.py
src/infrastructure/logger/: adapter.py  factory.py
src/infrastructure/middleware/: exception.py  logging.py
src/infrastructure/migrations/: permissions.sql
src/infrastructure/migrations/versions/: 1dcd0c13eb30_initial.py  8496538d2a51_initial.py
src/infrastructure/monitoring/: __init__.py  metrics.py
src/infrastructure/monitoring/prometheus/: alerts.yml  prometheus.yml
src/infrastructure/security/: adapter.py  exceptions.py
src/infrastructure/security/adapters/: adapter.py
src/infrastructure/security/application/: exceptions.py
src/infrastructure/tasks/: celery_config.py  exceptions.py  factory.py  tasks.py
src/ioc/: registry.py
src/setup/: common.py  fastapi_app.py
tests/: conftest.py
tests/bookings/: conftest.py  test_adapter.py  test_api.py  test_service.py
tests/comment/: conftest.py  test_adapter.py  test_api.py  test_service.py
tests/fixtures/: mocks.py
tests/hotels/: conftest.py  test_adapter.py  test_api.py  test_service.py
tests/hotels/integration/: test_adapter.py
tests/hotels/unit/: test_api.py  test_service.py
tests/rooms/: conftest.py  test_adapter.py  test_api.py  test_service.py
tests/rooms/unit/: test_service.py
tests/security/unit/: test_adapter.py
tests/user/: conftest.py  test_adapter.py  test_api.py  test_service.py
(+112 files in other folders)
