[project]
name = "hotels"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.5",
    "celery>=5.5.3",
    "dishka>=1.6.0",
    "fastapi>=0.116.1",
    "flower>=2.0.1",
    "mypy>=1.17.1",
    "pillow>=11.3.0",
    "pydantic-settings>=2.10.1",
    "ruff>=0.12.11",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.35.0",
]
