[project]
name = "hotels"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiobotocore>=2.25.2",
    "alembic>=1.16.5",
    "celery>=5.5.3",
    "dishka>=1.6.0",
    "email-validator>=2.3.0",
    "fastapi>=0.116.1",
    "fastapi-mail>=1.5.0",
    "flower>=2.0.1",
    "mypy>=1.17.1",
    "passlib>=1.7.4",
    "pillow>=11.3.0",
    "pydantic-settings>=2.10.1",
    "python-jose>=3.5.0",
    "ruff>=0.12.11",
    "sqlalchemy>=2.0.43",
    "typer>=0.20.0",
    "types-aiobotocore>=2.26.0.post1",
    "types-botocore>=1.0.2",
    "types-passlib>=1.7.7.20250602",
    "types-python-jose>=3.5.0.20250531",
    "uvicorn>=0.35.0",
]
