[project]
name = "hotels"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiobotocore>=2.25.2",
    "alembic>=1.16.5",
    "anyio>=4.10.0",
    "argon2-cffi>=25.1.0",
    "asgi-correlation-id>=4.3.4",
    "asyncpg>=0.31.0",
    "authlib>=1.6.6",
    "botocore-types>=0.2.2",
    "celery>=5.5.3",
    "dishka>=1.6.0",
    "email-validator>=2.3.0",
    "fastapi>=0.116.1",
    "fastapi-mail>=1.5.0",
    "flower>=2.0.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "orjson>=3.11.5",
    "phonenumbers>=9.0.21",
    "pillow>=11.3.0",
    "prometheus-client>=0.22.1",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "pydantic-extra-types>=2.11.0",
    "pydantic-settings>=2.10.1",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "redis>=7.1.0",
    "sqlalchemy>=2.0.43",
    "structlog>=25.5.0",
    "typer>=0.20.0",
    "types-aiobotocore>=2.26.0.post1",
    "types-passlib>=1.7.7.20250602",
    "types-python-jose>=3.5.0.20250531",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "greenlet>=3.2.4",
    "minio>=7.2.20",
    "mypy>=1.17.1",
    "testcontainers[postgres, rabbitmq, minio]>=4.13.3",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-httpx>=0.36.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.12.11",
]

[tool.mypy]
ignore_missing_imports = true
strict = false
local_partial_types = true
warn_unreachable = true
check_untyped_defs = true
exclude = ["src/infrastructure/migrations/"]

[tool.ruff]
exclude = ["src/infrastructure/migrations/"]
line-length = 120
preview = true

[tool.ruff.lint]
extend-select = ["I", "PTH", "B", "A", "N", "PT", "COM", "E", "W", "UP", "D"]
ignore = ["COM812", "PLR6301", "TRY400", "D100", "D101", "D104", "D106", "D107", "D203", "D212", "D401", "D404", "D405"]
external = ["WPS"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
pythonpath = "src"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "--tb=short",
    "--cov=src/",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::UserWarning",
    "ignore:datetime.datetime.utcnow:DeprecationWarning:botocore", # https://github.com/boto/boto3/issues/3889
    "ignore:.*requested an async fixture.*:pytest.PytestRemovedIn9Warning", # Skip async fixture warnings for skipped tests
    "ignore:Remove `format_exc_info` from your processor chain.*:UserWarning", # Ignore structlog format_exc_info warning
]
